# AI-HVA

./: .gitignore  NxtPX4-final.json  README.md  STPA json Template 1.md  activator-connections-prsd.net  activator-final.json  activator-isolate-prsd.net  activator-prsd-connections-prsd.net  activator-prsd-final.json  activator-prsd-prsd-connections-prsd.net  activator-prsd-prsd-final.json  activator-prsd-prsd-isolate-prsd.net  activator-prsd-prsd-prsd.net  activator-prsd-prsd.kicad_sch  activator-prsd-prsd.net  activator-prsd.kicad_sch  activator-prsd.net  activator.net  app.py  cli.py  combinedOCRProcessor.py  component_db.json  config.env  config.json  connections-prsd.net  corrected_document.txt  cubesat_obc-final.json  detect_new_hardware.py  diff_scyt129g.txt  documentProcessor.py  example-NE.kicad_sch  example-connections-prsd.net  example-final.json  example-isolate-prsd.net  example-prsd.net  example.net  example2-final.json  example2-prsd.net  exampleList.txt  filtered.net  (+33 more)
03_preprocessed_netlist/: activator-prsd.net  example2.net  example3 copy.net  example3.net
04_parsed_STPA/: activator-prsd.json  example2.json  example3 copy.json  example3.json  temp_output.json
GUI/: battery-monitor-prsd.kicad_sch  battery-monitor-prsd.net  chiller.py  gui.py  result.net  test.py
frontend/: __init__.py  app_state.py  component_selector.py  datasheet_manager.py  kicad_export.py  pipeline_runner.py  tk_app.py
pipeline/: .dockerignore  Dockerfile  check_components.py  check_urls.py  extract_datasheets.py  process_datasheets.py  quickOCR.py  requirements.txt
(+46 files in other folders)
